--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Pare_ai_pk"
         tools:targetApi="31">
         <activity
+            android:name=".ui.chatbot.ChatbotActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.history.DetailHistoryActivity"
             android:exported="false" />
         <activity
