--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:theme="@style/Theme.Pare_ai_pk"
         tools:targetApi="31">
         <activity
+            android:name=".ui.onboarding.OnboardingActivity"
+            android:theme="@style/Theme.Pare_ai_pk.NoActionBar"
+            android:exported="false" />
+        <activity
             android:name=".ui.chatbot.ChatbotActivity"
             android:exported="false" />
         <activity
