--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,16 @@
         android:theme="@style/Theme.Pare_ai_pk"
         tools:targetApi="31">
         <activity
-            android:name=".ui.onboarding.OnboardingActivity"
+            android:name=".ui.about.AboutActivity"
             android:theme="@style/Theme.Pare_ai_pk.NoActionBar"
             android:exported="false" />
         <activity
+            android:name=".ui.onboarding.OnboardingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pare_ai_pk.NoActionBar" />
+        <activity
             android:name=".ui.chatbot.ChatbotActivity"
+            android:theme="@style/Theme.Pare_ai_pk.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".ui.history.DetailHistoryActivity"
